@@ -1,5 +1,5 @@
 /* SPDX-License-Identifier: BSD-3-Clause */
-/* Copyright 2017-2022, Intel Corporation */
+/* Copyright 2017-2023, Intel Corporation */
 
 #ifndef PMEM2_MEMSET_SSE2_H
 #define PMEM2_MEMSET_SSE2_H
@@ -91,10 +91,13 @@ memset_small_sse2(char *dest, __m128i xmm, size_t len, flush_fn flush)
 	 * path) in the optimized version.
 	 * libc's memset also does that, so we can't use it here.
 	 */
+#if VG_PMEMCHECK_ENABLED
 	if (On_pmemcheck) {
 		memset_nodrain_generic(dest, (uint8_t)_mm_cvtsi128_si32(xmm),
 				len, PMEM2_F_MEM_NOFLUSH, NULL, NULL);
-	} else {
+	} else
+#endif
+	{
 		memset_small_sse2_noflush(dest, xmm, len);
 	}
 
